--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="View your test results with a detailed summary of your performance in reaction, memory, verbal, and visual categories. Compare your scores with others and track your progress." />
+    <meta name="author" content="Chijioke Nwabasili" />
     <link rel="icon" href="image/favicon-32x32.png" type="image/png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
